hphp/hack/test/typecheck/tconst/abstract_type_in_concrete_class_with_trait.php.exp
File "abstract_type_in_concrete_class_with_trait.php", line 11, characters 13-15:
This class was declared as final. It must provide an implementation for the abstract constant 'NUM' (Typing[4047])
File "abstract_type_in_concrete_class_with_trait.php", line 4, characters 18-20:
Declaration is here
